--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository: mingkin/mingkin.github.io
 paginate: 5
 
 # MatJek specific configurations
-github_profile: "https://github.com/knightyun"
+github_profile: "https://github.com/mingkin"
 user: "Ming"
 user_email: "694247696@qq.com"
 # contact_url: "https://goo.gl/tVljbV"
