--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ paginate: 5
 # MatJek specific configurations
 github_profile: "https://github.com/mingkin"
 user: "Ming"
-user_email: "694247696@qq.com"
+user_email: "wangmaming@126.com"
 # contact_url: "https://goo.gl/tVljbV"
 # google_tracking_id: "UA-96359860-1"
 # google_site_verification: "UA-96359860-1"
